--- a/calib/标定说明.md
+++ b/calib/标定说明.md
@@ -37,18 +37,14 @@ roslaunch aruco_ros single.launch
 1.像素
 2.x范围(按照相机坐标系，也就是横向)
 3.y范围(纵向)
-4.z范围(相机的深度方向)
+4.z范围(垂直于像素平面的方向)
 5.激光强度阈值
 6.marker数量
-7.是否启用camera info，建议为0
-8.相机内参 (3x4)
-9.
-10.
-11.迭代次数
-12.雷达->相机 初始旋转角
-13.雷达->相机 初始偏移量
+7.相机内参 (3x4)
+10.迭代次数
+11.雷达->相机 初始旋转角
+12.雷达->相机 初始偏移量
 ```
->第12行的旋转参数表示不理解，目前按照官网设置，后续还需要把图像进行旋转 
 
 ### lidar_camera_calibration.yaml
 ```
@@ -68,6 +64,9 @@ lidar topic
 6.e
 7.下一个标定板参数
 ```
+
+## 配置aruco_mapping的相机参数
+把内参标定的txt文件结果复制到``.ini``文件中
 
 ## 启动标定
 ```bash
