--- a/calib/标定说明.md
+++ b/calib/标定说明.md
@@ -1,4 +1,7 @@
-# 相机内参标定
+# 内参标定
+
+> 注意分辨率对内参矩阵的影响，更换分辨率之后要重新标定
+
   ## 启动相机
 
   ```bash
@@ -16,23 +19,19 @@
 > 
 > --square参数是指小方格的尺寸(m)
 
-点击calibrate之后会卡很久，等着sava变绿就好了，结果在/tmp文件夹
+点击calibrate之后会卡很久，等着**sava**按键变绿就好了，结果在``/tmp``文件夹的一个压缩包中
 
 
-# 相机和雷达的外参标定
-## 先把雷达和相机都启动
+# 外参标定
+## 雷达和相机启动
 ```bash
-roslaunch bringup four_cam_bringup.launch
+roslaunch bringup four_cam_low.launch
 roslaunch bringip lidar.launch
 ```
 
-## 测试aruco
-```bash
-roslaunch aruco_ros single.launch
-```
-
-## 配置conf文件夹参数文件
+## 配置参数
 ### config_file.txt
+
 ```
 1.像素
 2.x范围(按照相机坐标系，也就是横向)
@@ -46,7 +45,14 @@ roslaunch aruco_ros single.launch
 12.雷达->相机 初始偏移量
 ```
 
+初始参数很关键，该参数大致把雷达坐标系(x前y左z上)转到相机坐标系(x右y下z前)，这样配置范围的时候就方便了
+
+同时最后得到外参矩阵是在这个初始的参数上左乘了ICP得到的RT矩阵
+
+> 具体看代码
+
 ### lidar_camera_calibration.yaml
+
 ```
 camera topic
 camera info topic
@@ -54,6 +60,7 @@ lidar topic
 ```
 
 ### marker_coordinates.txt
+
 标定板的参数
 ```
 1.标定板数量
@@ -65,25 +72,34 @@ lidar topic
 7.下一个标定板参数
 ```
 
-## 配置aruco_mapping的相机参数
-把内参标定的txt文件结果复制到``.ini``文件中
+### 配置aruco_mapping中的相机参数
+把内参标定的``txt文件``结果复制到``data/*.ini``文件中
 
 ## 启动标定
 ```bash
 roslaunch lidar_camera_calibration find_transform.launch
-```       
-在Ubuntu18下面会报warning，Ubuntu16没出现
-
+```
+> 在Ubuntu18中会报warning
+>
 > GLib-GObject-CRITICAL **: 16:02:02.766: g_object_unref: assertion 'G_IS_OBJECT (object)' failed
 
-目前出现相机框的时候，会触发阻塞函数等待键盘按键，不用管报错，**键盘按一下按键**能够解除这个阻塞函数，先鼠标选好点，在键盘按一下空格，就可以录入点了
+出现cloud窗口的时候，会触发阻塞函数等待键盘按键，不用管上面的报错。
 
-迭代过程中卡死的情况，通过调整标定板姿势解决，尽量保证能够找到两个矩形出来
+在cloud窗口，从左到右，顺时针顺序标记出标定板的边框。标定方法是鼠标点击之后，**键盘按一下空格**解除这个阻塞函数，四次操作之后会看到框选出一条边，终端还输出了这条边的参数信息。
 
-迭代成功之后最好把终端的输出保存一下，这个包的输出没太看懂
-  
-# 外参标定效果
-  
+## 标定结果
+
+输出路径在程序包路径的``/log``路径下
+
+> 迭代成功之后最好把终端的输出保存一下，这个包的输出没太看懂
+>
+> 目前把终端输出的平均偏移和最终translate结合起来用，没遇到啥问题
+
+## 标定效果
+
+1. 用cam_lidar_seg/project来测试
+2. 直接用rviz
+
 按照标定输出的tf变换，雷达和图像**互相垂直**。
 
 猜测是一开始的文件里面指定的旋转参数有问题，得看看源码是怎么转的。
