修改硬件启动参数

--- a/bringup/硬件启动说明.md
+++ b/bringup/硬件启动说明.md
@@ -5,6 +5,8 @@
 roslaunch bringup single_camera.launch
 # 四个相机
 roslaunch bringup four_camera.launch
+# 相机+雷达
+roslaunch bringup all.launch
 ```
 
 - 启动雷达
@@ -20,3 +22,11 @@ rviz -f velodyne
 ```bash
 rosrun bringup pub_image PATH
 ```
+
+- tf相关
+
+默认的相机启动程序会启动tf，其中包含了相机中各个传感器的外参(可以``rostopic echo /tf_static``查看)
+
+相机图像发布在``camera_color_optical_frame``上，和``camera_link``之间存在一个旋转关系
+
+为了方便使用，关闭默认的tf，按照标定好的外参自定义tf，并以velodyne为根节点
