修改地图模型

--- a/localize/定位说明.md
+++ b/localize/定位说明.md
@@ -13,3 +13,8 @@
     ```
     roslaunch hdl_localization loc_construction.launch
     ```
+
+    4. evo
+    ```
+    evo_traj bag odom.bag /odom -p
+    ```
