增加定位说明

--- a/localize/定位说明.md
+++ b/localize/定位说明.md
@@ -18,3 +18,56 @@
     ```
     evo_traj bag odom.bag /odom -p
     ```
+录制实验轨迹
+```
+roslaunch bringup lidar.launch
+roslaunch bringup cam4_imu.launch
+roslaunch bringup pub_tf.launch
+rosrun imu_trans imu_trans_node
+roslaunch hdl_localization 6_imu.launch
+rosbag record /odom -o test
+```
+
+录制实验轨迹(有相机)
+```
+roslaunch bringup lidar.launch
+roslaunch bringup cam4_imu.launch
+roslaunch bringup pub_tf.launch
+rosrun imu_trans imu_trans_node
+roslaunch hdl_localization 6_imu.launch
+rosbag record /odom -o test
+```
+录制传感器
+```
+rosbag record /velodyne_points /imu_transformed /tf_static -o data
+```
+仿真器播放传感器数据
+```
+rosparam set /use_sim_time true
+```
+录制ground truth
+```
+roslaunch hdl_localization 6_gt.launch
+rosbag play 
+rosbag record /odom -o gt
+```
+
+录制aloam的轨迹
+```
+roslaunch aloam_velodyne aloam_velodyne_VLP_16.launch
+rosbag play
+rosbag record /aft_mapped_to_init_high_frec -o aloam
+```
+
+evo画图
+```
+evo_traj tum loam.tum gt.tum odom.tum --ref gt.tum -p -a --plot_mode xy
+```
+evo分析
+```
+evo_ape tum gt.tum loam.tum -a -p
+evo_ape tum gt.tum odom.tum -a -p
+```
+0629这天的实验的绝对误差
+
+> mean	0.070958  vs  0.042985
