添加发布一张图片的launch文件

--- a/bringup/硬件启动说明.md
+++ b/bringup/硬件启动说明.md
@@ -20,7 +20,7 @@ rviz -f velodyne
 - 发送一张图片到ros的/testImage话题
 
 ```bash
-rosrun bringup pub_image PATH
+roslaunch bringup pub_image.launch
 ```
 
 - tf相关
