更新定位说明

--- a/localize/定位说明.md
+++ b/localize/定位说明.md
@@ -1,64 +1,66 @@
-- 点云地图定位
+# 仿真环境的点云地图定位
   
-    1. 生成点云地图
+1. 生成点云地图
     ```
-    cad模型用meshlab转为stl
-    stl导入cloudcompare，edit-mesh-sample采样得到点云文件
+    1. cad模型用meshlab转为stl
+    2. stl导入cloudcompare，edit-mesh-sample采样得到点云地图
     ```
-    2. 启动仿真环境
+2. 启动仿真环境
     ```
     roslaunch jackal_velodyne construction.launch
     ```
-    3. 启动定位
+3. 启动定位
     ```
     roslaunch hdl_localization loc_construction.launch
     ```
 
-    4. evo
+4. evo
     ```
     evo_traj bag odom.bag /odom -p
     ```
-录制实验轨迹
+
+# lidar + IMU 定位
+
+启动硬件
 ```
 roslaunch bringup lidar.launch
 roslaunch bringup cam4_imu.launch
 roslaunch bringup pub_tf.launch
 rosrun imu_trans imu_trans_node
+```
+
+启动定位
+```
 roslaunch hdl_localization 6_imu.launch
+```
+
+录制轨迹
+```
 rosbag record /odom -o test
 ```
 
-录制实验轨迹(有相机)
-```
-roslaunch bringup lidar.launch
-roslaunch bringup cam4_imu.launch
-roslaunch bringup pub_tf.launch
-rosrun imu_trans imu_trans_node
-roslaunch hdl_localization 6_imu.launch
-rosbag record /odom -o test
-```
-录制传感器
+录制传感器数据
 ```
 rosbag record /velodyne_points /imu_transformed /tf_static -o data
 ```
+
 仿真器播放传感器数据
 ```
 rosparam set /use_sim_time true
+rosbag play --clock
 ```
-录制ground truth
+
+使用传感器数据录制ground truth
 ```
 roslaunch hdl_localization 6_gt.launch
-rosbag play 
 rosbag record /odom -o gt
 ```
 
-录制aloam的轨迹
+使用传感器数据录制aloam的轨迹
 ```
 roslaunch aloam_velodyne aloam_velodyne_VLP_16.launch
-rosbag play
 rosbag record /aft_mapped_to_init_high_frec -o aloam
 ```
-
 evo画图
 ```
 evo_traj tum loam.tum gt.tum odom.tum --ref gt.tum -p -a --plot_mode xy
@@ -68,6 +70,111 @@ evo分析
 evo_ape tum gt.tum loam.tum -a -p
 evo_ape tum gt.tum odom.tum -a -p
 ```
-0629这天的实验的绝对误差
-
+> 0629这天的实验的绝对误差
+> 
 > mean	0.070958  vs  0.042985
+
+
+
+# 带有分割的全局定位实验
+启动硬件
+```
+roslaunch bringup lidar.launch
+roslaunch bringup four_cam_lowres.launch
+```
+
+记录传感器数据
+```
+rosbag record /camera1/color/image_raw /camera2/color/image_raw /camera3/color/image_raw /camera4/color/image_raw /velodyne_points -o 4cam_plus_lidar
+```
+
+使用录制的数据图像分割
+```
+conda activate seg
+rosbag play
+roslaunch semantic_segmentation_ros four_cam_seg.launch
+```
+
+得到分割的点云
+```
+roslaunch cam_lidar_seg fusion.launch
+rviz -d /home/lixiang/seg_ws/src/fusion/cam_lidar_seg/rviz/four_cam_lidar_seg.rviz
+```
+
+全局定位
+```
+roslaunch hdl_global_localization hdl_global_localization.launch
+roslaunch hdl_global_localization hdl_global_localization_seg.launch
+rqt_plot
+添加/inlier_fraction
+注意修改图框的比例，一般是y[0-1] x[0-150] 关闭自动滚动
+```
+
+# 视觉 激光 imu融合定位
+启动硬件
+```
+roslaunch bringup lidar.launch
+roslaunch bringup cam4_imu.launch
+roslaunch bringup cam1_high_res.launch 
+```
+
+启动orbslam
+```
+启动前需要发布一个base_link -> camera optical的tf
+roslaunch bringup pub_tf.launch
+启动单目
+roslaunch orb_slam2_ros orb_slam2_d435_mono.launch
+注意单目的初始化
+orbslam会发布odom->base_link的tf
+```
+
+转换imu坐标
+```
+rosrun imu_trans imu_trans_node
+```
+
+录制传感器数据
+```
+rosbag record /velodyne_points /imu_transformed /camera4/imu /tf_static /camera1/color/image_raw /camera1/color/camera_info -o lvi_odom_data
+```
+
+使用录制的数据生成里程计
+```
+roslaunch bringup pub_tf.launch
+roslaunch orb_slam2_ros orb_slam2_d435_mono.launch
+rosparam set /use_sim_time true
+rosbag play --clock
+等到初始化结束暂停播放
+```
+
+启动融合里程计
+```
+继续播放bag
+roslaunch hdl_localization 6_imu_vo.launch
+会发布map->odom的tf
+此时tf就维护成了map->odom->base_link
+```
+
+录制轨迹
+```
+rosbag record /odom /orb_slam2_mono/pose -o odom
+```
+
+轨迹从bag导出到tum格式
+```
+evo_traj bag odom_2021-07-22-11-36-00.bag /odom --save_as_tum
+evo_traj bag odom_2021-07-22-11-36-00.bag /orb_slam2_mono/pose --save_as_tum
+```
+
+使用bag生成ground truth和aloam轨迹看上面的笔记
+
+evo比较多条曲线
+```
+保存ape轨迹到result
+evo_ape tum ground_truth.tum loam.tum -a --plot --plot_mode xy --save_results results/loam.zip
+evo_ape tum ground_truth.tum odom.tum -a --plot --plot_mode xy --save_results results/odom.zip
+evo_ape tum ground_truth.tum orb_slam.tum -a --plot --plot_mode xy --save_results results/orb_slam.zip
+比较result
+evo_res results/*.zip -p --save_table results/table.csv
+
+```
