--- a/localize/定位说明.md
+++ b/localize/定位说明.md
@@ -103,7 +103,9 @@ rviz -d /home/lixiang/seg_ws/src/fusion/cam_lidar_seg/rviz/four_cam_lidar_seg.rv
 
 全局定位
 ```
+启动服务端
 roslaunch hdl_global_localization hdl_global_localization.launch
+启动客户端
 roslaunch hdl_global_localization hdl_global_localization_seg.launch
 rqt_plot
 添加/inlier_fraction
@@ -177,4 +179,123 @@ evo_ape tum ground_truth.tum orb_slam.tum -a --plot --plot_mode xy --save_result
 比较result
 evo_res results/*.zip -p --save_table results/table.csv
 
+```
+
+bag转tum
+evo_traj bag aloam_2.bag /aft_mapped_to_init_high_frec --save_as_tum
+
+
+robio导出
+导出轨迹图
+evo_traj tum aloam.tum ours_wo_imu.tum ours.tum --ref ground_truth.tum -p --plot_mode xy -va
+导出误差图
+evo_ape tum ground_truth.tum aloam.tum -va -p --plot_mode xy --save_results results/aloam.zip
+evo_ape tum ground_truth.tum ours.tum -va -p --plot_mode xy --save_results results/ours.zip
+evo_ape tum ground_truth.tum ours_wo_imu.tum -va -p --plot_mode xy --save_results results/ours_wo_imu.zip
+
+evo参数
+大图
+```
+{
+    "console_logging_format": "%(message)s", 
+    "euler_angle_sequence": "sxyz", 
+    "global_logfile_enabled": false, 
+    "plot_axis_marker_scale": 0, 
+    "plot_backend": "Qt5Agg", 
+    "plot_export_format": "pdf", 
+    "plot_figsize": [
+        7, 
+        4.5
+    ], 
+    "plot_fontfamily": "serif", 
+    "plot_fontscale": 1.2, 
+    "plot_invert_xaxis": false, 
+    "plot_invert_yaxis": false, 
+    "plot_linewidth": 1, 
+    "plot_mode_default": "xyz", 
+    "plot_multi_cmap": "none", 
+    "plot_pose_correspondences": false, 
+    "plot_pose_correspondences_linestyle": "dotted", 
+    "plot_reference_alpha": 0.5, 
+    "plot_reference_color": "black", 
+    "plot_reference_linestyle": "--", 
+    "plot_seaborn_palette": "bright6", 
+    "plot_seaborn_style": "ticks", 
+    "plot_split": false, 
+    "plot_statistics": [
+        "rmse", 
+        "median", 
+        "mean", 
+        "std", 
+        "min", 
+        "max"
+    ], 
+    "plot_texsystem": "pdflatex", 
+    "plot_trajectory_alpha": 0.75, 
+    "plot_trajectory_cmap": "jet", 
+    "plot_trajectory_linestyle": "-", 
+    "plot_usetex": false, 
+    "plot_xyz_realistic": true, 
+    "ros_map_alpha_value": 1.0, 
+    "ros_map_unknown_cell_value": 205, 
+    "save_traj_in_zip": false, 
+    "table_export_data": "stats", 
+    "table_export_format": "csv", 
+    "table_export_transpose": true, 
+    "tf_cache_lookup_frequency": 10, 
+    "tf_cache_max_time": 10000.0
+}
+```
+
+小图
+```
+{
+    "console_logging_format": "%(message)s", 
+    "euler_angle_sequence": "sxyz", 
+    "global_logfile_enabled": false, 
+    "plot_axis_marker_scale": 0, 
+    "plot_backend": "Qt5Agg", 
+    "plot_export_format": "pdf", 
+    "plot_figsize": [
+        4.5, 
+        4
+    ], 
+    "plot_fontfamily": "serif", 
+    "plot_fontscale": 1.2, 
+    "plot_invert_xaxis": false, 
+    "plot_invert_yaxis": false, 
+    "plot_linewidth": 1, 
+    "plot_mode_default": "xyz", 
+    "plot_multi_cmap": "none", 
+    "plot_pose_correspondences": false, 
+    "plot_pose_correspondences_linestyle": "dotted", 
+    "plot_reference_alpha": 0.5, 
+    "plot_reference_color": "black", 
+    "plot_reference_linestyle": "--", 
+    "plot_seaborn_palette": "bright6", 
+    "plot_seaborn_style": "ticks", 
+    "plot_split": false, 
+    "plot_statistics": [
+        "rmse", 
+        "median", 
+        "mean", 
+        "std", 
+        "min", 
+        "max"
+    ], 
+    "plot_texsystem": "pdflatex", 
+    "plot_trajectory_alpha": 0.75, 
+    "plot_trajectory_cmap": "jet", 
+    "plot_trajectory_linestyle": "-", 
+    "plot_usetex": false, 
+    "plot_xyz_realistic": true, 
+    "ros_map_alpha_value": 1.0, 
+    "ros_map_unknown_cell_value": 205, 
+    "save_traj_in_zip": false, 
+    "table_export_data": "stats", 
+    "table_export_format": "csv", 
+    "table_export_transpose": true, 
+    "tf_cache_lookup_frequency": 10, 
+    "tf_cache_max_time": 10000.0
+}
 ```
